force-app/main/default/objects/Site_Information__c/Site_Information__c.object-meta.xml
<CustomObject>
    <customHelpPage>NCMT_HelpPage</customHelpPage>
    <description>NCMT Site Information</description>
    <label>Site Information</label>
    <nameField>
        <displayFormat>SI-{00000000}</displayFormat>
        <label>Site Information Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Informations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>