force-app/main/default/objects/Site_Information__c/fields/Add_perimeter_site__c.field-meta.xml
<CustomField>
    <fullName>Add_perimeter_site__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Add perimeter site</description>
    <label>Add perimeter site</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>