force-app/main/default/objects/Site_Information__c/fields/Add_Structured_parking__c.field-meta.xml
<CustomField>
    <fullName>Add_Structured_parking__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Add Structured parking</description>
    <label>Add Structured parking</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>