force-app/main/default/objects/Site_Information__c/fields/Adjusted_Area_required__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Area_required__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Adjusted Area required</description>
    <label>Adjusted Area required</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>