force-app/main/default/objects/Site_Information__c/fields/Base_Area_required__c.field-meta.xml
<CustomField>
    <fullName>Base_Area_required__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Base Area required</description>
    <label>Base Area required</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>