force-app/main/default/objects/Site_Information__c/fields/Best_minimum_floorplate_250_x_120__c.field-meta.xml
<CustomField>
    <fullName>Best_minimum_floorplate_250_x_120__c</fullName>
    <defaultValue>30000</defaultValue>
    <description>Best minimum floorplate, 250 x 120</description>
    <label>Best minimum floorplate, 250 x 120</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>