force-app/main/default/objects/Site_Information__c/fields/Corners_Area_Required__c.field-meta.xml
<CustomField>
    <fullName>Corners_Area_Required__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Corners Area Required</description>
    <label>Corners Area Required</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>