force-app/main/default/objects/Site_Information__c/fields/FAR__c.field-meta.xml
<CustomField>
    <fullName>FAR__c</fullName>
    <defaultValue>0</defaultValue>
    <description>FAR</description>
    <label>FAR</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>