force-app/main/default/objects/Site_Information__c/fields/Finished_Site__c.field-meta.xml
<CustomField>
    <fullName>Finished_Site__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Finished Site</description>
    <label>Finished Site</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>