force-app/main/default/objects/Site_Information__c/fields/Floorplate__c.field-meta.xml
<CustomField>
    <fullName>Floorplate__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Floorplate</description>
    <label>Floorplate</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>