force-app/main/default/objects/Site_Information__c/fields/Footprint_Area__c.field-meta.xml
<CustomField>
    <fullName>Footprint_Area__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Footprint Area</description>
    <label>Footprint Area</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>