force-app/main/default/objects/Site_Information__c/fields/GF_Perimeter__c.field-meta.xml
<CustomField>
    <fullName>GF_Perimeter__c</fullName>
    <defaultValue>0</defaultValue>
    <description>GF Perimeter</description>
    <label>GF Perimeter</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>