force-app/main/default/objects/Site_Information__c/fields/Gross_Building_Area__c.field-meta.xml
<CustomField>
    <fullName>Gross_Building_Area__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Gross Building Area</description>
    <label>Gross Building Area</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>