force-app/main/default/objects/Site_Information__c/fields/Larger_of_FAR_or_Footprint__c.field-meta.xml
<CustomField>
    <fullName>Larger_of_FAR_or_Footprint__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Larger of  FAR or Footprint</description>
    <label>Larger of  FAR or Footprint</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>