force-app/main/default/objects/Site_Information__c/fields/Number_of_Stories_max__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Stories_max__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of Stories (max)</description>
    <label>Number of Stories (max)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>