force-app/main/default/objects/Site_Information__c/fields/Optimize_stories__c.field-meta.xml
<CustomField>
    <fullName>Optimize_stories__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Optimize # stories</description>
    <label>Optimize # stories</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>