force-app/main/default/objects/Site_Information__c/fields/Perimeter_area_SF__c.field-meta.xml
<CustomField>
    <fullName>Perimeter_area_SF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Perimeter area SF</description>
    <label>Perimeter area SF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>