force-app/main/default/objects/Site_Information__c/fields/Perimeter_LF__c.field-meta.xml
<CustomField>
    <fullName>Perimeter_LF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Perimeter LF</description>
    <label>Perimeter LF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>