force-app/main/default/objects/Site_Information__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description>Child record to NCMT project.</description>
    <label>Project</label>
    <referenceTo>NCMT_Project__c</referenceTo>
    <relationshipLabel>Site Informations</relationshipLabel>
    <relationshipName>Site_Informations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>