force-app/main/default/objects/Site_Information__c/fields/Site_Area_based_on_FAR__c.field-meta.xml
<CustomField>
    <fullName>Site_Area_based_on_FAR__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Site Area based on FAR</description>
    <label>Site Area based on FAR</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>