force-app/main/default/objects/Site_Information__c/fields/Site_Area_for_Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Site_Area_for_Default_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Site Area for Default Value</description>
    <label>Site Area for Default Value</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>