force-app/main/default/objects/Site_Information__c/fields/Surface_parking_Area_required__c.field-meta.xml
<CustomField>
    <fullName>Surface_parking_Area_required__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Surface parking Area required</description>
    <label>Surface parking Area required</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>