force-app/main/default/objects/Site_Information__c/fields/Total_Area__c.field-meta.xml
<CustomField>
    <fullName>Total_Area__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total Area</description>
    <label>Total Area</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>