force-app/main/default/objects/Site_Information__c/fields/Total_Minimum_Overall_Site_Area_demand__c.field-meta.xml
<CustomField>
    <fullName>Total_Minimum_Overall_Site_Area_demand__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total Minimum Overall Site Area - demand</description>
    <label>Total Minimum Overall Site Area - demand</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>