force-app/main/default/objects/Site_Information__c/fields/Total_Minimum_Overall_Site_Area_FAR__c.field-meta.xml
<CustomField>
    <fullName>Total_Minimum_Overall_Site_Area_FAR__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total Minimum Overall Site Area - FAR</description>
    <label>Total Minimum Overall Site Area - FAR</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>