force-app/main/default/objects/Site_Information__c/fields/Total_Site_required_by_setbacks__c.field-meta.xml
<CustomField>
    <fullName>Total_Site_required_by_setbacks__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total Site required by setbacks</description>
    <label>Total Site required by setbacks</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>