force-app/main/default/objects/Site_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Finished_Site__c</columns>
    <columns>Footprint_Area__c</columns>
    <columns>Gross_Building_Area__c</columns>
    <columns>Perimeter_area_SF__c</columns>
    <columns>Total_Site_required_by_setbacks__c</columns>
    <columns>Total_Direct_Site_Area__c</columns>
    <columns>Total_Area__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>